@startuml
' Estética
skinparam classAttributeIconSize 0
skinparam linetype ortho
hide empty members

' =======================================================
' ENTIDADES PRINCIPAIS
' =======================================================

class User {
  + userId: Long <<PK>>
  --
  + name: String (Varchar 250)
  + email: String (Varchar 500)
  + password: String (Varchar 225)
}

class Purchase {
  + purchaseId: Long <<PK>>
  --
  + purchaseProduct: String (Varchar 50)
  + quantity: Integer
  + materialType: MaterialType
  + purchaseDate: LocalDate
  --
  + user_id: Long <<FK>>
}

class Disposal {
  + disposalId: Long <<PK>>
  --
  + disposalProduct: String (Varchar 50)
  + quantity: Integer
  + materialType: MaterialType
  + destination: DisposalDestination
  + disposalDate: LocalDate
  --
  + user_id: Long <<FK>>
}

' =======================================================
' ENUMS (valores reais do projeto)
' =======================================================

enum MaterialType {
  PLASTIC ("Plástico")
  GLASS ("Vidro")
  METAL ("Metal")
  PAPER ("Papel")
  ORGANIC ("Orgânico")
  NOT_RECYCLABLE ("Não Reciclável")
}

enum DisposalDestination {
  RECYCLING ("Reciclagem")
  COMPOSTING ("Compostagem")
  WASTE ("Rejeito")
  DONATION ("Doação")
}

' =======================================================
' RELACIONAMENTOS
' =======================================================

User "1" -- "0..*" Purchase : has
User "1" -- "0..*" Disposal : has

Purchase ..> MaterialType
Disposal ..> MaterialType
Disposal ..> DisposalDestination

' =======================================================
' NOTAS (iguais ao estilo do diagrama enviado)
' =======================================================

note top of Purchase
  "Compra"
end note

note top of Disposal
  "Descarte"
end note

note right of MaterialType
  Tipos de materiais:
  - Recicláveis (ex.: vidro, metal, papel)
  - Não recicláveis
end note

note right of DisposalDestination
  Destinos:
  - Reciclagem
  - Compostagem
  - Rejeito
  - Doação
end note
@enduml
